# yorihime

./: Cargo.toml  README.md
resources/: address_db.json
src/: app.rs  config.rs  errors.rs  game.rs  main.rs  readers.rs  tui.rs  utils.rs
src/inputs/: actions.rs  events.rs  key.rs  mod.rs
src/ui/: mod.rs  tui.rs  ui.rs
